# claude-spring-standards

./: .coderabbit.yaml  .cursorrules  .cursorrules.mdc  .env.example  .gitignore  README.md  TODO_IMPLEMENTATION.md  build.gradle  build.gradle.kts  docker-compose.yml  factcheck-todo.md  gradle.properties  jira_exam.md  kentback.md  langfuse-data.json  senario.txt  settings.gradle  settings.gradle.kts  test-langfuse.md  test-langfuse.txt
mcp-lambda-server/: .env.example  .gitignore  Dockerfile  README.md  build-lambda.sh  mcp-lambda-bridge.py  pyproject.toml  requirements.txt  run-mcp.sh  template.yaml
mcp-lambda-server/docs/: IMPLEMENTATION_GUIDE.md  MCP_REDESIGN_PLAN.md
mcp-lambda-server/src/: __init__.py  api_client.py  config.py  handler.py  layer_registry.py  models.py  server.py
mcp-lambda-server/src/context/: __init__.py  context_collector.py  intent_classifier.py  layer_detector.py
mcp-lambda-server/src/feedback/: __init__.py  analyzer.py  integration.py  logger.py  models.py  project_learner.py  storage.py  weight_adjuster.py
mcp-lambda-server/src/services/: __init__.py  context_service.py
mcp-lambda-server/src/template/: __init__.py  engine.py  models.py
mcp-lambda-server/src/tools/: __init__.py  approve.py  feedback.py  get_architecture.py  get_config_files.py  get_context.py  get_layer_detail.py  get_onboarding_contexts.py  get_rule.py  list_rules.py  suggest.py  (+4 more)
mcp-lambda-server/tests/: conftest.py  test_feedback_schema_enrichment.py  test_feedback_validation.py  test_layer_registry.py  test_models_classtype.py  test_suggest_convention.py
(+2711 files in other folders)
