[project]
name = "conventionhub-mcp"
version = "2.0.0"
description = "Convention Hub MCP 서버 - 팀 코딩 컨벤션 관리"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "Jinja2>=3.1.5",
]

[project.scripts]
conventionhub-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
